--- a/Venda.html
+++ b/Venda.html
@@ -7,6 +7,7 @@
 
 <body> 
 <header> 
+  <link rel="stylesheet" href="Persona.css">
 Vea las fotos de los estudiantes y sus perfiles.</header>
 <main>
 Estudiante 1: Morgana Luiza Salvi Merlin Sacsher. Custo =100.000GS
