--- a/Venda.html
+++ b/Venda.html
@@ -7,7 +7,7 @@
 
 <body> 
 <header> 
-  
+  VENDO 3 ESTUDIANTE DE MEDICINA
 Vea las fotos de los estudiantes y sus perfiles. <link rel="stylesheet" href="Persona.css">
 </header>
  
