--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head> 
@@ -8,14 +7,14 @@
 
 <body> 
 <header> 
-Vea las fotos de los estudiantes y sus perfiles.</header>
+  VENDO 3 ESTUDIANTE DE MEDICINA
+Vea las fotos de los estudiantes y sus perfiles. <link rel="stylesheet" href="Persona.css">
+</header>
+ 
 <main>
-Estudiante 1: Morgana Luiza Salvi Merlin Sacsher. Custo =100.000GS
-       <img src= "Captura de tela 2025-08-27 192204.png" alt= "Foto de la estudiante 1" >
-Estudiante 2 : Sarah Norato Custo =100.000GS
-        <img src= "sarah.png" alt= "Foto de la estudiante 2">
- Estudiante 3 : Maria Eduarda Martinez Custo =100.000GS
-       <img src= "madu.png" alt= "Foto de la estudiante 3">
+Estudiante 1: Morgana Luiza Salvi Merlin Sacsher. Custo =100.000GS <img src= "Captura de tela 2025-08-27 192204.png" alt= "Foto de la estudiante 1" >
+Estudiante 2 : Sarah Norato Custo =100.000GS<img src= "sarah.png" alt= "Foto de la estudiante 2">
+Estudiante 3 : Maria Eduarda Martinez Custo =100.000GS <img src= "madu.png" alt= "Foto de la estudiante 3">
  </main>
 </body>
 <html/>
